--- a/project1/index.html
+++ b/project1/index.html
@@ -51,9 +51,9 @@
 					<h2 class="orange yeseva">COMPLETED<br> PROJECTS</h2>
 					<p class="font14 width442">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction market we have made happy more than 1000 families</p>
 					<div class="slider visib width100 relative">
-						<img class="toLeft" src="../images/toLeft.svg" width="36" alt="arrow left">
-						<img src="../images/imageM.png" width="100%" alt="house">
-						<img class="toRight" src="../images/toRight.svg" width="36" alt="arrow right">
+						<img class="toLeft" src="images/toLeft.svg" width="36" alt="arrow left">
+						<img src="images/imageM.png" width="100%" alt="house">
+						<img class="toRight" src="images/toRight.svg" width="36" alt="arrow right">
 					</div>
 					<div class="grid-4">
 						<div class="txt">
@@ -109,14 +109,14 @@
 				<div>
 					<h3 class="yeseva upper white">online control</h3>
 					<div class="width100 flex justCenter">
-						<img class="toTop" src="../images/line.svg" width="32" alt="line">
-						<img src="../images/camera.svg" width="40" alt="icon">
-						<img src="../images/line.svg" width="32" alt="line">					
+						<img class="toTop" src="images/line.svg" width="32" alt="line">
+						<img src="images/camera.svg" width="40" alt="icon">
+						<img src="images/line.svg" width="32" alt="line">					
 					</div>
 				</div>
 				<div>
 					<div class="relative img1 flex center spaceA width817 width100">
-						<img src="../images/repairL.png" width="100%">
+						<img src="images/repairL.png" width="100%">
 						<div class="overlap"></div>
 						<div class="absolute center">
 							<svg width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -139,10 +139,10 @@
 						</div>
 					</div>
 				</div>
-				<svg width="55" height="3" viewBox="0 0 55 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<svg class="margin-bot" width="55" height="3" viewBox="0 0 55 3" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<rect y="0.497559" width="55" height="1.54334" rx="0.771672" fill="#E3B873"/>
 					</svg>
-					<p class="font18 whiteM">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
+					<p class="width-680 font18 whiteM">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a link to the broadcast.</p>
 				<div class="userInfo wrap flex spaceA">
 					<div class="orange whiteM">
 						<label>Name</label>
@@ -172,21 +172,21 @@
 				</div>
 			</div>
 			</section>
-			<section class="flex center wrap height1650">
+			<section class="flex wrap height1650">
 				<div class="container ">
-					<div class="width100">
+					<div class="width100 center">
 					<h3 class="yeseva upper">TYPES OF REPAIR</h3>
 						<div class="width100 flex justCenter">
-							<img class="toTop" src="../images/line.svg" width="32" alt="line">
-							<img src="../images/types.svg" width="28" alt="icon">
-							<img src="../images/line.svg" width="32" alt="line">					
+							<img class="toTop" src="images/line.svg" width="32" alt="line">
+							<img src="images/types.svg" width="28" alt="icon">
+							<img src="images/line.svg" width="32" alt="line">					
 						</div>
 					</div>
 					<div class="flex wrap spaceB alignC height550">
 					<div class="repairType imgRe flex spaceA">
 						<div class="list">
 							<ul class=" flex column spaceB ">
-								<li class="font18 margin yeseva listNo"><b>Redecorating</b></li>
+								<li class="font18 margin yeseva listNo">Redecorating</li>
 								<li class="font13 margin">Dismantling of old coatings</li>
 								<li class="font13 margin">Wallpapering</li>
 								<li class="font13 margin">Painting walls and ceilings</li>
@@ -196,13 +196,13 @@
 								<li class="font13 margin">Replacing doors</li>
 							</ul>
 							<br>
-							<button class="btnSpecial upper white font18 yeseva">from 900 rub/m2</button>
+							<div class="birka upper white font18 yeseva">from 900 rub/m2</div>
 						</div>
 					</div>
 					<div class="repairType imgOver flex spaceA">
 						<div class="list">
 							<ul class=" flex column spaceB ">
-								<li class="font18 margin yeseva listNo"><b>Overhaul</b></li>
+								<li class="font18 margin yeseva listNo">Overhaul</li>
 								<li class="font13 margin">Dismantling of old coatings</li>
 								<li class="font13 margin">Wallpapering</li>
 								<li class="font13 margin">Painting walls and ceilings</li>
@@ -212,13 +212,13 @@
 								<li class="font13 margin">Replacing doors</li>
 							</ul>
 							<br>
-							<button class="btnSpecial upper white font18 yeseva">from 1800 rub/m2</button>
+							<div class="upper white font18 yeseva birka">from 1800 rub/m2</div>
 						</div>
 					</div>
 					<div class="repairType imgDes flex spaceA">
 						<div class="list">
 							<ul class=" flex column spaceB ">
-								<li class="font18 margin yeseva listNo"><b>Designer Repair</b></li>
+								<li class="font18 margin yeseva listNo">Designer Repair</li>
 								<li class="font13 margin">Dismantling of old coatings</li>
 								<li class="font13 margin">Wallpapering</li>
 								<li class="font13 margin">Painting walls and ceilings</li>
@@ -228,7 +228,7 @@
 								<li class="font13 margin">Replacing doors</li>
 							</ul>
 							<br>
-							<button class="btnSpecial upper white font18 yeseva">from 4000 rub/m2</button>
+							<div class="birka upper white font18 yeseva">from 4000 rub/m2</div>
 						</div>
 					</div>
 				</div>
@@ -237,41 +237,41 @@
 					<div class="width100 flex spaceA wrap">
 						<div class="half flex column spaceB paddingLeft">
 							<div class="flex center">
-								<img src="../images/one.svg" width="88px" alt=one>
+								<img src="images/one.svg" width="88px" alt=one>
 								<p class="font14 left">Our specialist will arrive for measurements per day <br>contact, or appoint a date convenient for you</p>
 							</div>
 							<div class="flex center">
-								<img src="../images/two.svg" width="88px" alt="two">
+								<img src="images/two.svg" width="88px" alt="two">
 								<p class="font14 left">Free metering</p>
 							</div>
 							<div class="flex center">
-								<img src="../images/three.svg" width="88px" alt="three">
+								<img src="images/three.svg" width="88px" alt="three">
 								<p class="font14 left">Free consultation</p>
 							</div>
 							
 							<div class="flex center">
-								<img src="../images/four.svg" width="88px" alt="four">
+								<img src="images/four.svg" width="88px" alt="four">
 								<p class="font14 left">Get a cost estimate and<br> the timing of your future repairs</p>
 							</div>
 
 						</div>
-						<img class="absolute imgBuild" src="../images/build.png" width="806" height="645" alt="building">
+						<img class="absolute imgBuild" src="images/build.png" width="806" height="645" alt="building">
 							<form class="white backBlack flex column spaceA">
 								<p class="font18">Leave a request for free <br>departure of the measurer</p>
 								<div>
 									<label class="font13">Name</label>
 									<br>
-									<input class="font14" type="text" placeholder="What is your name:">
+									<input class="white font14" type="text" placeholder="What is your name:">
 								</div>
 								<div>
 									<label class="font13">Phone</label>
 									<br>
-									<input class="font14" type="text" placeholder="Your phone number:">
+									<input class="white font14" type="text" placeholder="Your phone number:">
 								</div>
 								<div>
 									<label class="font13">Email</label>
 									<br>
-									<input class="font14" type="text" placeholder="Your email:">
+									<input class="white font14" type="text" placeholder="Your email:">
 								</div>
 								<div class="flex font14 start">
 									<label class="label">
@@ -283,26 +283,26 @@
 								<button class="btnSpecial upper white">call the measurer</button>
 							</form>
 							<div class="flex end width100 paddingRight center">
-									<img src="../images/pig.svg" width="113" alt="pig">
+									<img src="images/pig.svg" width="113" alt="pig">
 									<p class="font18 orange">Help save 10 - 20% of the <br>cost of materials</p>
 							</div>
 					</div>
 				</div>
 			</section>
 			<section class="height864 relative">
-				<img class="invis absolute" src="../images/fantasy1.png" width="100%" height="864" alt="house">
+				<img class="invis absolute" src="images/fantasy1.png" width="100%" height="864" alt="house">
 				<div class="invis overlap str"></div>
 				
 				<div class="container relative centerM spaceA photos">
-					<img class="absolute image1 invis" src="../images/image1.png" width="354" height="275" alt="photo">
-					<img class="absolute image2 invis" src="../images/image2.png" width="354" height="625" alt="photo">
-					<img class="absolute image3 invis" src="../images/image3.png" width="354" height="350" alt="photo">
-					<img class="absolute image4 invis" src="../images/image4.png" width="354" height="558" alt="photo">
+					<img class="absolute image1 invis" src="images/image1.png" width="354" height="275" alt="photo">
+					<img class="absolute image2 invis" src="images/image2.png" width="354" height="625" alt="photo">
+					<img class="absolute image3 invis" src="images/image3.png" width="354" height="350" alt="photo">
+					<img class="absolute image4 invis" src="images/image4.png" width="354" height="558" alt="photo">
 					<h3 class="orange yeseva font27 upper">We realize your<br> wildest fantasies</h3>
 					<div class="slider visib width100 relative">
-						<img class="toLeft" src="../images/toLeft.svg" width="36" alt="arrow left">
-						<img src="../images/image4M.png" width="100%" alt="house">
-						<img class="toRight" src="../images/toRight.svg" width="36" alt="arrow right">
+						<img class="toLeft" src="images/toLeft.svg" width="36" alt="arrow left">
+						<img src="images/image4M.png" width="100%" alt="house">
+						<img class="toRight" src="images/toRight.svg" width="36" alt="arrow right">
 					</div>
 					<ul class="invis font20 ul1 white listNo">
 						<li class="orange"><u>American classic</u></li>
@@ -323,9 +323,9 @@
 				<div class="container flex wrap spaceB alignC height550 negMargin">
 					<h3 class="yeseva upper">our clients</h3>
 					<div class="width100 flex justCenter">
-						<img class="toTop" src="../images/line.svg" width="32" alt="line">
-						<img src="../images/ruka.svg" width="28" alt="icon">
-						<img src="../images/line.svg" width="32" alt="line">					
+						<img class="toTop" src="images/line.svg" width="32" alt="line">
+						<img src="images/ruka.svg" width="28" alt="icon">
+						<img src="images/line.svg" width="32" alt="line">					
 					</div>
 					<div class="width100">
 						<p class="font18">80% of our customers recommend us to their<br>friends and family.</p>
@@ -333,7 +333,7 @@
 					<div class="repairType flex spaceA wrap column person">
 							<div class="width100 flex center start">
 								<div class="human marginR">
-									<img src="../images/maria.png" width="76" height="76" alt="human">
+									<img src="images/maria.png" width="76" height="76" alt="human">
 								</div>
 								<p class="inline font18"><b>Fedosova Maria <br>Konstantinovna</b></p>
 							</div>
@@ -341,14 +341,14 @@
 to Georgia for its professionalism and approach.
 The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
 						<div class="flex-start flex">
-							<div class="upper white font18 yeseva area"><img src="../images/Group.svg" width="32" height="31" alt="area"> 40 M2</div>
-							<div class="upper white font18 yeseva area"><img src="../images/Group1.png" width="32" height="31" alt="area"> 48 days</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group.svg" width="32" height="31" alt="area"> 40 M2</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group1.png" width="32" height="31" alt="area"> 48 days</div>
 						</div>
 					</div>
 					<div class="repairType flex spaceA wrap column person">
 							<div class="width100 flex center start">
 								<div class="human marginR">
-									<img src="../images/sergey.png" width="76" height="76" alt="human">
+									<img src="images/sergey.png" width="76" height="76" alt="human">
 								</div>
 								<p class="inline font18"><b>Afanasyev Sergey <br>Alexandrovich</b></p>
 							</div>
@@ -356,14 +356,14 @@ The repair process was turned out in terms, faster than anticipated. Team mobile
 to Georgia for its professionalism and approach.
 The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
 						<div class="flex-start flex">
-							<div class="upper white font18 yeseva area"><img src="../images/Group.svg" width="32" height="31" alt="area"> 90 M2</div>
-							<div class="upper white font18 yeseva area"><img src="../images/Group1.png" width="32" height="31" alt="area"> 128 days</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group.svg" width="32" height="31" alt="area"> 90 M2</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group1.png" width="32" height="31" alt="area"> 128 days</div>
 						</div>
 					</div>
 					<div class="repairType flex spaceA wrap column person">
 							<div class="width100 flex center start">
 								<div class="human marginR">
-									<img src="../images/egor.png" width="76" height="76" alt="human">
+									<img src="images/egor.png" width="76" height="76" alt="human">
 								</div>
 								<p class="inline font18"><b>Kiriev Egor<br> Leonidovich</b></p>
 							</div>
@@ -371,32 +371,32 @@ The repair process was turned out in terms, faster than anticipated. Team mobile
 to Georgia for its professionalism and approach.
 The repair process was turned out in terms, faster than anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices democratic. I recommend these masters.</p>
 						<div class="flex-start flex">
-							<div class="upper white font18 yeseva area"><img src="../images/Group.svg" width="32" height="31" alt="area"> 56 M2</div>
-							<div class="upper white font18 yeseva area"><img src="../images/Group1.png" width="32" height="31" alt="area"> 86 days</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group.svg" width="32" height="31" alt="area"> 56 M2</div>
+							<div class="upper white font18 yeseva area"><img src="images/Group1.png" width="32" height="31" alt="area"> 86 days</div>
 						</div>
 					</div>
 					</div>
 					<div class="width100 gridImg">
-					<img src="../images/imgLeft.svg" width="50%" height="505" alt="city">
-					<img src="../images/buildRight.svg" width="50%" height="505" alt="city">
+					<img src="images/imgLeft.svg" width="50%" height="505" alt="city">
+					<img src="images/buildRight.svg" width="50%" height="505" alt="city">
 					</div>
 				</section>
 				<section class="relative height953">
-					<img class="invis absolute" src="../images/build.svg" width="100%" height="953" alt="building">
+					<img class="invis absolute" src="images/build.svg" width="100%" height="953" alt="building">
 					<div class="invis overlap str"></div>
 					<div class="container width100 flex justCenter wrap">
-						<div class="negMar backBlack height445 width883 flex wrap center justCenter">
+						<div class="negMar white backBlack height445 width883 flex wrap center justCenter">
 							<h3 class="center white font20 upper width100">have any questions?</h3>
-							<div class="flex spaceB wrapM width100">
+							<div class="flex  spaceB wrapM width100">
 								<div class="width208">
 								<label class="font13">Name</label>
 									<br>
-									<input class="font14" type="text" placeholder="What is your name:">
+									<input class="white font14" type="text" placeholder="What is your name:">
 								</div>
 								<div class="width50">
 									<label class="font13">Phone</label>
 									<br>
-									<input class="font14" type="text" placeholder="Your phone number:">
+									<input class="white font14" type="text" placeholder="Your phone number:">
 								</div>
 								<div class="visib width100">
 								<label class="font13">Question</label>
@@ -407,7 +407,7 @@ The repair process was turned out in terms, faster than anticipated. Team mobile
 							<div class="invis width100">
 								<label class="font13">Question</label>
 								<br>
-								<input class="font14" type="text" placeholder="I want to know:">
+								<input class="white font14" type="text" placeholder="I want to know:">
 							</div>
 							<div class="flex justCenter font14 spaceB agree white width100">
 								<label class="label">
@@ -421,13 +421,13 @@ The repair process was turned out in terms, faster than anticipated. Team mobile
 							<p class="z invis orange yeseva font20 width100 center">Rostov-on-Don, Nansen St., 239 Shopping Center<br>
 Decorum Tel +7 (928) 768 32 29</p>
 
-							<img class="z invis width100" src="../images/social.svg" width="71" height="28" alt="social">
-							<img class="z invis" src="../images/map.png" width="925" height="465" alt="map">
-							<img class="z visib" src="../images/map.png" width="100%" alt="map">
+							<img class="z invis width100" src="images/social.svg" width="71" height="28" alt="social">
+							<img class="z invis" src="images/map.png" width="925" height="465" alt="map">
+							<img class="z visib" src="images/map.png" width="100%" alt="map">
 							<p class="z visib orange yeseva font20 width100 center">Rostov-on-Don, Nansen St., 239 Shopping Center<br>
 Decorum Tel +7 (928) 768 32 29</p>
 
-							<img class="z visib width100" src="../images/social.svg" width="71" height="28" alt="social">
+							<img class="z visib width100" src="images/social.svg" width="71" height="28" alt="social">
 					</div>
 				</section>
 	</main>
